src/test/ui/block-expression-remove-semicolon.stderr
error[E0308]: mismatched types
  --> $DIR/block-expression-remove-semicolon.rs:6:18
   |
LL |       let x: i32 = {
   |  __________________^
LL | |
LL | |         foo();
   | |              - help: consider removing this semicolon
LL | |     };
   | |_____^ expected i32, found ()
   |
   = note: expected type `i32`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
